# Index.exe-decent-repo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analysis_results.md  api.py  architecture.md  download_models.py  main.py  pyproject.toml  requirements.txt  result_analysis.md  setup.bash  setup.txt  skills-lock.json  ui_integration_idea.md
docs/: VOICE_AGENT_HANDOVER.md  VOICE_AGENT_STATUS.md  architecture.md  feature_description.md  ps_description.md  result_analysis.md  submission_guidelines.md  ui_integration_idea.md
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/voice/: page.tsx
frontend/components/: FieldCard.tsx  GaugeCard.tsx  MetricCard.tsx  RecommendationList.tsx  TranscriptScroll.tsx  WaveformRing.tsx
frontend/hooks/: useVoiceSession.ts
frontend/lib/: types.ts
models/: gbdt_oof_predictions.pkl  lgb_barricades_fold_0.pkl  lgb_barricades_fold_1.pkl  lgb_barricades_fold_2.pkl  lgb_barricades_fold_3.pkl  lgb_barricades_fold_4.pkl  lgb_diversion_fold_0.pkl  lgb_diversion_fold_1.pkl  lgb_diversion_fold_2.pkl  lgb_diversion_fold_3.pkl  lgb_diversion_fold_4.pkl  lgb_eis_fold_0.pkl  lgb_eis_fold_1.pkl  lgb_eis_fold_2.pkl  lgb_eis_fold_3.pkl  lgb_eis_fold_4.pkl  lgb_manpower_fold_0.pkl  lgb_manpower_fold_1.pkl  lgb_manpower_fold_2.pkl  lgb_manpower_fold_3.pkl  lgb_manpower_fold_4.pkl  nn_oof_predictions.pkl  two_tower_fold_0.pt  two_tower_fold_1.pt  two_tower_fold_2.pt  two_tower_fold_3.pt  two_tower_fold_4.pt  vocabularies.pkl
src/event_driven_congestion/: __init__.py  data_processing.py  evaluate.py  models.py  train.py
src/ps2/: __init__.py  data_analysis.py  evaluate.py  models.py  train.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/components/: map_component.py  model_loader.py  prediction_card.py
streamlit_app/pages/: 1_Predict.py  2_Live_Map.py  3_Analytics.py  4_About.py
streamlit_app/utils/: feature_builder.py  geocoder.py  inference.py
voice_agent/: agents.py  geocoder.py  knowledge_base.py  main.py  shared_state.py  websocket_bridge.py
